Revert(this is not the problem) "Fixed IE8 Bug - z-index for divs in ContainerFieldset AND select"
This reverts commit 9d7b5e65862ed8cc7312605ff24a9cd2b3b50fc4.

--- a/Kwf_js/FrontendForm/FieldSet.css
+++ b/Kwf_js/FrontendForm/FieldSet.css
@@ -17,11 +17,6 @@
     z-index: 1;
 }
 
-.kwfFormContainerFieldSet fieldset .kwfField select {
-    position: relative;
-    z-index: 1;
-}
-
 .kwfFormContainerFieldSet .kwfFormContainerFieldSetCollapsed div {
     display: none;
 }
